Fixed the footer section and testimonials to render better on mobile phone

--- a/src/components/Footer/ContactDetails/ContactDetails.module.css
+++ b/src/components/Footer/ContactDetails/ContactDetails.module.css
@@ -16,3 +16,9 @@
     list-style: none;
     margin: 0;
 }
+
+@media only screen and (max-width: 425px){
+    .ContactDetails {
+        padding-bottom: 0;
+    }
+}
