--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -50,4 +50,9 @@
     .Footer .FooterSections > div {
         width: 100%;
     }
+
+    .lastRow p:first-child {
+        font-size: .75em;
+        letter-spacing: 1px;;
+    }
 }
