--- a/src/components/Footer/PortfolioSmall/Item/Item.module.css
+++ b/src/components/Footer/PortfolioSmall/Item/Item.module.css
@@ -12,3 +12,9 @@
 .PortfolioItem:hover {
     opacity: 1;
 }
+
+@media only screen and (max-width: 768px) {
+    .PortfolioItem {
+        width: 31%;
+    }
+}
