--- a/src/components/Testimonials/Testimonial/Testimonial.module.css
+++ b/src/components/Testimonials/Testimonial/Testimonial.module.css
@@ -26,3 +26,13 @@
     letter-spacing: 3px;
     font-weight: bold;
 }
+
+@media only screen and (max-width: 425px) {
+    .CarouselItem .TestimonialContent {
+        width: 100%;
+    }
+
+    .CompanyName {
+        font-size: 0.8;
+    }
+}
